# wifi-deauth-manager

./: .gitignore  LICENSE  PKGBUILD  PROMPT_RECREACION.md  README.md  com.freebuff.wifi-deauth-manager.policy  com.wifi-deauth-manager.policy  install.sh  pyproject.toml  test_parser.py  wifi-deauth-manager-launcher.sh  wifi-deauth-manager.desktop  wifi-deauth-manager.install  wifi_deauth_manager.py
.github/workflows/: release.yml
debian/: changelog  control  copyright  install  postinst  postrm  rules
rpm/: wifi-deauth-manager.spec
